# tinyPEngine

./: CMakeLists.txt  README.md
include/: BaseObject.hpp  Camera.hpp  Node.hpp  NodeCube.hpp  NodeSphere.hpp  RenderBase.hpp  Renderer.hpp  Timer.hpp
src/: BaseObject.cpp  Camera.cpp  Node.cpp  NodeCube.cpp  NodeSphere.cpp  RenderBase.cpp  Renderer.cpp  Timer.cpp  main.cpp
